--- a/app/views/games/score.html.erb
+++ b/app/views/games/score.html.erb
@@ -1,2 +1,4 @@
-<h1>Games#score</h1>
-<p>Find me in app/views/games/score.html.erb</p>
+<div class = "container">
+  <%= @message %>
+  <%= link_to "Play Again", new_path %>
+</div>
