--- a/app/views/games/new.html.erb
+++ b/app/views/games/new.html.erb
@@ -11,7 +11,9 @@
   </div>
   <h3> What is the longest word you can find? </h3>
   <form action="/score" method="post">
-    <input type="text" name="new" placeholder="Try your luck" id="input">
+    <%= hidden_field_tag :authenticity_token, form_authenticity_token %>
+    <%= hidden_field_tag :grid, @letters%>
+    <input type="text" name="word" placeholder="Try your luck" id="input">
     <input class = "btn btn-primary" type="submit">
   </form>
 </div>
