--- a/app/views/games/new.html.erb
+++ b/app/views/games/new.html.erb
@@ -13,6 +13,7 @@
   <form action="/score" method="post">
     <%= hidden_field_tag :authenticity_token, form_authenticity_token %>
     <%= hidden_field_tag :grid, @letters%>
+    <%= hidden_field_tag :cookie, params[:cookie_store]%>
     <input type="text" name="word" placeholder="Try your luck" id="input">
     <input class = "btn btn-primary" type="submit">
   </form>
